# PromptBench

./: .env.example  .gitignore  Makefile  README.md  README.pt-BR.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/adapters/: __init__.py  base.py  claude.py  factory.py  fake.py  fake_scripts.py  gemini.py  openai.py
backend/app/api/: compare.py  export.py  model_configs.py  prompts.py  runs.py  scorecards.py  tasks.py
backend/app/core/: config.py  db.py  logging.py  pricing.py
backend/app/evaluation/: aggregate.py  json_extract.py  judge.py  regression.py  render.py  task_checks.py
backend/app/evaluation/checks/: __init__.py  exact_match.py  json_schema_valid.py  numeric_range.py  regex_match.py  registry.py  required_fields.py  set_match.py
backend/app/models/: __init__.py  enums.py  eval_result.py  eval_run.py  model_config.py  prompt_version.py  scorecard.py  task.py  test_case.py
backend/app/schemas/: __init__.py  comparison.py  model_config.py  prompt_version.py  recent.py  rubric.py  run.py  scorecard.py  task.py  test_case.py
backend/app/workers/: tasks.py
backend/scripts/: run_real.py  seed.py  smoke_adapter.py  smoke_providers.py  validate_datasets.py
backend/tests/: conftest.py  test_adapters.py  test_aggregate.py  test_api_smoke.py  test_checks.py  test_json_extract.py  test_judge.py  test_models_import.py  test_regression.py
datasets/: task_a_resume_matching.jsonl  task_b_support.jsonl
docs/: ADR.md
docs/progress/: block_1_scaffold.md  block_2_models_migrations.md  block_3_adapters.md  block_4_evaluation.md  block_5_datasets_prompts.md  block_6_api_worker.md  block_7_regression.md  block_8_frontend.md  block_9_seed_readme.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: callout.tsx  judge-samples.tsx  recent-activity.tsx  regression-verdict.tsx  rubric-card.tsx  score-radar.tsx  section-header.tsx  (+2 more)
(+23 files in other folders)
